# arc89-playground

./: .env.example  .env.localnet  .env.localnet.example  .env.testnet  .env.testnet.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  config.py  create_asa.py  create_metadata.py  get_metadata.py  pyproject.toml  setup.py
examples/: 01_create_asa.py  02_create_metadata.py  03_get_asa.py  05_delete_asa.py  create_asa.py  create_metadata.py  delete_asa.py  delete_metadata.py  get_asa.py  get_metadata.py
metadata/: example.json
scripts/: create_address.py  create_wallet.py  deploy_asa_metadata_registry.py  switch_network.py
utils/: __init__.py  prompts.py  runtime.py  setup.py  utils.py
