[tool.poetry]
name = "arc89-playground"
version = "0.1.0"
description = "Playground for exploring ARC-89 metadata registry on Algorand"
authors = ["Sofia Nicoletti <sofia.nicoletti@algorand.foundation>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
dotenv = "^0.9.9"
algokit-utils = "^4.2.3"
asa-metadata-registry = { git = "https://github.com/algorandfoundation/arc89.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
pre-commit-hooks = "^6.0.0"
mdformat = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

